[tool.poetry]
name = "sshgen"
version = "0.2.0"
description = "SSH config generator based on Ansible hosts yaml file"
license = "Unlicense"
repository = "https://github.com/pythoninja/sshgen"
authors = ["pythoninja <pythoninja@users.noreply.github.com>"]
readme = "README.md"
keywords = ["ssh", "config", "ansible", "cli", "generator"]

[tool.poetry.urls]
"Changelog" = "https://github.com/pythoninja/sshgen/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
sshgen = "sshgen.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
ruamel-yaml = "^0.17.31"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.tbump]
github_url = "https://github.com/pythoninja/sshgen"

[tool.tbump.version]
current = "0.2.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "chore(release): v{new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "README.md"
search = "Current version: v{current_version}"

[[tool.tbump.file]]
src = "README.md"
search = "sshgen@v"

[[tool.tbump.file]]
src = "sshgen/__init__.py"
search = "__version__ = '{current_version}'"

[[tool.tbump.before_commit]]
name = "Bump poetry"
cmd = "poetry version {new_version}"

[[tool.tbump.before_commit]]
name = "Generate Changelog"
cmd = "git cliff --tag {new_version} --output CHANGELOG.md"

[tool.ruff]
exclude = []
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # mccabe
    "E",    # pycodestyle - error
    "F",    # Pyflakes
    "G",    # flake8-logging-format
    "N",    # pep8-naming
    "Q",    # flake8-quotes
    "S",    # flake8-bandit
    "W",    # pycodestyle - warning
    "EM",   # flake8-errmsg
    "ARG",  # flake8-unused-arguments
    "ANN",  # flake8-annotations
    "BLE",  # flake8-blind-except
    "COM",  # flake8-commas
    "FURB", # refurb
    "LOG",  # flake8-logging
    "ISC",  # flake8-implicit-str-concat
    "PL",   # Pylint
    "PT",   # flake8-pytest-style
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "PERF", # Perflint
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "TD",   # flake8-todos
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "YTT"   # flake8-2020
]
ignore = ["ANN101", "ANN204"]
line-length = 120
target-version = "py312"
preview = true

[tool.ruff.pylint]
max-args = 5

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"
avoid-escape = false
